<resources>
    <string name="app_name">Simple To Do</string>

    <string name="add_a_task">Add Task</string>
    <string name="done">Done</string>
    <string name="due">   Due</string>
    <string name="due_date">Due Date</string>
    <string name="exit">Exit</string>
    <string name="notes">Notes</string>
    <string name="task">Task</string>
    <string name="task_name">Task Name</string>
    <string name="priority">Priority</string>
    <string name="priority_prompt">Select a priority</string>
    <string name="status">Status</string>

    <string-array name="priority_arrays">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <string name="status_prompt">Choose a status</string>

    <string-array name="status_arrays">
        <item>To Do</item>
        <item>Done</item>
    </string-array>
</resources>
