<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/bg_main">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/task_name" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/due_date" />

        <EditText
            android:id="@+id/etDueDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/notes" />

        <EditText
            android:id="@+id/etNotes"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:inputType="text|textMultiLine"
            android:layout_weight="0.75"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.25"
            android:text="@string/priority" />

        <Spinner
            android:id="@+id/spinnerPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/priority_arrays"
            android:prompt="@string/priority_prompt"
            android:popupBackground="@color/colorPrimary"
            android:layout_gravity="left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.25"
            android:text="@string/status" />

        <Spinner
            android:id="@+id/spinnerStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/status_arrays"
            android:prompt="@string/status_prompt"
            android:popupBackground="@color/colorPrimary"
            android:layout_gravity="left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.75"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnSaveItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/bg_main"
            android:ems="5"
            android:src="@drawable/save" />

        <ImageButton
            android:id="@+id/btnCancelItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/bg_main"
            android:ems="5"
            android:src="@drawable/cancel" />
    </LinearLayout>

</LinearLayout>