<?xml version="1.0" encoding="utf-8"?>
<!--main.xml-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_main"
    tools:context=".activities.MainActivity">
    >
    <RelativeLayout android:id="@+id/rl_country_heading"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_main">
        <TextView android:id="@+id/tvTask"
            android:layout_width="135dip"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/task"
            android:textStyle="normal|bold"
            android:textColor="@color/white_opaque"
            android:textSize="18dip">
        </TextView>
        <TextView android:id="@+id/tvPriority"
            android:layout_width="70dip"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/priority"
            android:textStyle="normal|bold"
            android:textColor="@color/white_opaque"
            android:textSize="18dip"
            android:layout_toRightOf="@+id/tvTask">
        </TextView>
        <TextView android:id="@+id/tvDueDate"
            android:layout_width="70dip"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/due"
            android:textStyle="normal|bold"
            android:textColor="@color/white_opaque"
            android:textSize="18dip"
            android:layout_toRightOf="@+id/tvPriority">
        </TextView>
        <TextView android:id="@+id/tvStatus"
            android:layout_width="70dip"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/done"
            android:textStyle="normal|bold"
            android:textColor="@color/white_opaque"
            android:textSize="18dip"
            android:layout_toRightOf="@+id/tvDueDate">
        </TextView>
    </RelativeLayout>
    <LinearLayout android:id="@+id/ll_country"
        android:layout_height="fill_parent" android:layout_width="fill_parent">
        <ScrollView android:id="@+id/ScrollView11"
            android:layout_width="fill_parent" android:layout_height="fill_parent"
            android:fillViewport="true">
            <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip">
                <TableLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/taskTable"
                    android:stretchColumns="0,1">
                </TableLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
